@@ -1,13 +1,7 @@
-use OpenSSL;
 use Test;
+use OpenSSL;
 
 plan 4;
-
-unless %*ENV<NETWORK_TESTING> {
-    diag "NETWORK_TESTING was not set";
-    skip-rest("NETWORK_TESTING was not set");
-    exit;
-}
 
 check(fetch('google.com', '/'));
 
